--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
  <div class="header-container">
     <header class="container header">
       <div class="container-logo">
-        <img src="/images/mountains-icon.svg" alt="">
+        <img src="/images/logo-company.svg" alt="">
         <span class="company-name ">{{ companyName }}</span>
       </div>
       <nav class="container-nav fs-18"> 
@@ -17,7 +17,7 @@
  </div>
 <section class="banner">
   <div class="text-wrapper">
-    <p class="container font-family-next">Насладись прогулкой в горах <br>
+    <p class="container">Насладись прогулкой в горах <br>
       с командой единомышленников</p>
   </div>
   <div class= "contaner-panel">
