--- a/src/app/assets/styles.scss
+++ b/src/app/assets/styles.scss
@@ -26,14 +26,10 @@
   flex-wrap: wrap;
 }
 
-.heigth-52 {
+.h-52 {
   height: 52px;
 }
 
 .width-270 {
   width: 270px;
-}
-
-.font-family-next {
-  font-family: 'Next Art';
 }
