--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
  <div class="header-container">
     <header class="container header">
       <div class="container-logo">
-        <img src="/images/logo-company.svg" alt="">
-        <span class="company-name ">{{ companyName }}</span>
+        <img src="/images/logo-company.svg" alt="логотип компании">
+        <span class="company-name">{{ companyName }}</span>
       </div>
       <nav class="container-nav fs-18"> 
         <a href="">Главная</a>
@@ -17,15 +17,14 @@
  </div>
 <section class="banner">
   <div class="text-wrapper">
-    <p class="container">Насладись прогулкой в горах <br>
-      с командой единомышленников</p>
+    <p class="container">Насладись прогулкой в горах<br>с командой единомышленников</p>
   </div>
   <div class= "contaner-panel">
-    <div class="container contaner-panel-signup ">
-      <form action="" class="form-container" >
+    <div class="container contaner-panel-signup">
+      <form class="form-container">
         <label>
           <select>
-            <option value="">Локация для тура</option>
+            <option>Локация для тура</option>
           </select>
           <span>выберите из списка</span>
         </label>
@@ -38,7 +37,7 @@
         </label>
         <label>
           <select>
-            <option value="">Участники</option>
+            <option>Участники</option>
           </select>
           <span>минимум 4 человека</span>
         </label>
