--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -68,7 +68,7 @@
   justify-content: center;
 }
 
-.text-wrapper {
+.intro-text-wrapper {
   position: absolute;
   font-weight: 700;
   width: 100%;
