--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-@if (isPageVisible) {
+@if (isDownload) {
   <div class="loading-container">
     <p class="loader" id="loader-indicator"></p>
   </div>
 }
-@if (!isPageVisible) {
+@if (!isDownload) {
   <div>
     <section class="banner">
       <div class="header-container">
@@ -26,7 +26,7 @@
       <div class="container-widget">
         <div class="widget container">
           @if (!isCounterVisible) {
-            <p class="date" id="current-date">{{ selectedDate }}</p>
+            <p class="date" id="current-date">{{ currentDate }}</p>
           }
           @if (isCounterVisible) {
             <div class="container-counter">
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="intro-text-wrapper">
-        <p class="container">Насладись прогулкой в горах<br>с командой единомышленников</p>
+        <p class="container">Насладись прогулкой в горах <br> с командой единомышленников</p>
       </div>
       <div class= "contaner-panel">
         <div class="container contaner-panel-signup">
@@ -58,7 +58,7 @@
               <select id="select-location" [(ngModel)]="selectedLocation" name="location" required>
                 <option value="" selected>Локация для тура</option>
                 @for (location of locations; track location.id) {
-                  <option>{{ location.location }}</option>
+                  <option>{{ location.name }}</option>
                 }
               </select>
               <span>выберите из списка</span>
@@ -67,7 +67,7 @@
               <div class="input-wrapper">
                 <input 
                   id="input-date" 
-                  [(ngModel)]="inputDate" 
+                  [(ngModel)]="selectedDate" 
                   type="text" 
                   placeholder="Дата похода" 
                   name="date" 
@@ -80,7 +80,7 @@
               <select id="select-participant" [(ngModel)]="selectedParticipant" name="participant" required>
                 <option value="" selected>Участники</option>
                 @for (participant of participants; track participant.id) {
-                  <option>{{ participant.participant }}</option>
+                  <option>{{ participant.quantity }}</option>
                 }
               </select>
               <span>выберите из списка</span>
@@ -101,7 +101,7 @@
           class="live-input" 
           type="text" 
           name="input-live">
-        <img src="/images/icon-arrow.svg" alt="стрелка">
+        <img src="/images/arrow-input-icon.svg" alt="стрелка">
         <p>{{ liveInput }}</p>
       </div>
     </section>
@@ -111,7 +111,7 @@
           <img class="img-1" src="/images/mountain-meadow.png">
         </div>
         <div class="text-container">
-          <span class="fs-24 collor-yello">о нашем походе</span>
+          <span class="fs-24 yellow">о нашем походе</span>
           <h1 class="fs-32 lh-120">Исследуйте все горные массивы мира вместе с нами</h1>
           <p class="fs-18 margin-40">Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur"и занялся его поисками в классической латинской литературе.</p>
           <button id="btn-tour-program" class="primary-button">Программа тура</button>
@@ -120,14 +120,14 @@
     <section class="services-section">
       <div class="container container-services">
         <div class="info-container">
-          <span class="fs-24 fw-400 collor-yello">наше предложение</span>
+          <span class="fs-24 fw-400 yellow">наше предложение</span>
           <h2 class="fs-32 lh-120">Лучшие программы для тебя</h2>
           <p class="fs-18 margin-40">Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа.</p>
           @for (service of services; track service.id) {
             <div class="service" 
-            (mouseenter)="service.hover = true"
-            (mouseleave)="service.hover = false"
-            [class.active] = "service.hover">
+              (mouseenter)="hoverServiceId = service.id"
+              (mouseleave)="hoverServiceId = null"
+              [class.active] = "hoverServiceId === service.id">
               <img [src]="'/images/' + service.img + '.svg'">
               <div>
                 <h3 class="fs-18">{{ service.title }}</h3>
