--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,7 @@
             </label>
             <button 
               id="btn-submit-search" 
-              [disabled]="isFormValid()" 
+              [disabled]="!isFormInValid()" 
               class="primary-button">
               Найти программу
             </button>
